feat: add auth components

--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,12 +1,12 @@
 <div class="flex h-screen w-screen">
-	<div class="relative hidden flex-1 items-end justify-center bg-primary-600 lg:flex">
+	<div class="relative hidden flex-1 items-end justify-center bg-night-700 lg:flex">
 		<img
 			class="absolute inset-0 h-full w-full object-cover opacity-20"
 			src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80&sat=-100"
 			alt="" />
 		<div class="m-20 space-y-4 text-white">
 			<h1 class="text-4xl font-bold">"A feel clicks away from creating your lottery Display"</h1>
-			<p class="text-sm">Some description in small text</p>
+			<p class="text-md">Some description in small text</p>
 		</div>
 	</div>
 	<div class="grid flex-1 items-center justify-center bg-white dark:bg-night-700">
@@ -18,75 +18,8 @@
 				</a>
 				<b class="text-md pl-3 font-bold text-gray-700 dark:text-white"> Finance </b>
 			</div>
-
-			<!-- login form -->
-			<form class="mt-10 space-y-6">
-				<div class="space-y-1">
-					<h2 class="flex items-center justify-center text-3xl font-semibold text-gray-700 dark:text-white">
-						Hello Again
-						<p class="text-primary-500">!</p>
-					</h2>
-					<p class="text-xs text-gray-400 dark:text-night-200">
-						Some description about this login page here.
-					</p>
-				</div>
-
-				<input type="hidden" name="remember" value="true" />
-				<div class="space-y-3 text-left">
-					<div class="relative">
-						<input type="text" id="email" class="peer block" placeholder=" " />
-						<label
-							for="email"
-							class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-75 transform bg-white px-2 text-xs text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
-							Email address
-						</label>
-					</div>
-					<div class="relative">
-						<input type="text" id="password" class="peer block" placeholder=" " />
-						<label
-							for="password"
-							class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-75 transform bg-white px-2 text-xs text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
-							Password
-						</label>
-					</div>
-				</div>
-
-				<div class="flex items-center justify-between space-x-3">
-					<div class="flex items-center">
-						<input id="remember-me" name="remember-me" type="checkbox" />
-						<label for="remember-me" class="ml-2 block text-sm text-gray-500 dark:text-night-200">
-							Remember me
-						</label>
-					</div>
-
-					<div class="text-sm">
-						<a class="font-medium text-primary-600 hover:text-primary-500"> Forgot your password? </a>
-					</div>
-				</div>
-
-				<!-- Submit Button -->
-				<div>
-					<button
-						type="submit"
-						class="group relative flex w-full justify-center rounded-md border border-transparent bg-primary-500 py-2 px-4 text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-primary-400">
-						<span class="absolute inset-y-0 left-0 flex items-center pl-3">
-							<svg
-								class="h-5 w-5 text-primary-100 group-hover:text-primary-200"
-								x-description="Heroicon name: solid/lock-closed"
-								xmlns="http://www.w3.org/2000/svg"
-								viewBox="0 0 20 20"
-								fill="currentColor"
-								aria-hidden="true">
-								<path
-									fill-rule="evenodd"
-									d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
-									clip-rule="evenodd"></path>
-							</svg>
-						</span>
-						Sign in
-					</button>
-				</div>
-			</form>
+			<!-- Route -->
+			<router-outlet></router-outlet>
 		</div>
 	</div>
 </div>
