--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@
 
 	[type='checkbox'],
 	[type='radio'] {
-		@apply h-4 w-4 rounded border-gray-300 text-primary-600 focus:ring-primary-500 dark:border-night-500 dark:bg-night-700;
+		@apply h-4 w-4 rounded border-gray-300 bg-gray-100 text-green-600 focus:ring-2 focus:ring-green-500 dark:border-night-600 dark:bg-night-700 dark:ring-offset-night-800 dark:focus:ring-green-600;
 	}
 }
 
