--- a/src/app/modules/layout/admin/admin.component.html
+++ b/src/app/modules/layout/admin/admin.component.html
@@ -7,7 +7,8 @@
 		<app-navbar></app-navbar>
 
 		<!-- main content -->
-		<div class="overflow-auto">
+		<div
+			class="scrollbar-thumb-rounded scrollbar-track-rounded overflow-auto scrollbar-thin scrollbar-track-gray-50 scrollbar-thumb-gray-100 dark:scrollbar-thumb-night-600 dark:scrollbar-track-night-700">
 			<router-outlet></router-outlet>
 		</div>
 
