feat: add toolbar

--- a/src/app/modules/layout/admin/admin.component.html
+++ b/src/app/modules/layout/admin/admin.component.html
@@ -5,7 +5,8 @@
 	<div class="grid flex-grow content-start bg-gray-100 dark:bg-night-800">
 		<!-- Header -->
 		<app-navbar></app-navbar>
-
+		<!-- Toolbar -->
+		<app-toolbar></app-toolbar>
 		<!-- main content -->
 		<div
 			class="scrollbar-thumb-rounded scrollbar-track-rounded overflow-auto scrollbar-thin scrollbar-track-gray-50 scrollbar-thumb-gray-100 dark:scrollbar-thumb-night-600 dark:scrollbar-track-night-700">
