--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,26 +1,4 @@
 <div class="mx-auto my-4 px-8 lg:container">
-	<!-- Navbar -->
-	<div class="mb-4 flex justify-between">
-		<div class="inline-block">
-			<h3 class="font-semibold text-gray-900 dark:text-white">Bidding Dashboard</h3>
-			<div class="space-x-1 text-xs font-medium text-gray-400 dark:text-night-300">
-				<a href="" class="hover:text-primary-500">Home</a>
-				<span> - Dashboards</span>
-			</div>
-		</div>
-		<div class="inline-block space-x-4">
-			<button
-				class="flex-none rounded-md bg-white px-4 py-2.5 text-xs font-semibold text-gray-500 dark:bg-night-700 dark:text-night-200">
-				Manage Bids
-			</button>
-			<button
-				class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-				Manage Bids
-			</button>
-		</div>
-	</div>
-	<!-- end navbar -->
-
 	<div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4">
 		<!-- Card -->
 		<div class="flex flex-col rounded-lg bg-white p-8 dark:bg-night-700 sm:flex-row md:col-span-2">
@@ -28,17 +6,17 @@
 			<div
 				class="min-h-[200px] w-full flex-1 cursor-pointer rounded-md bg-[url('https://preview.keenthemes.com/metronic8/demo1/assets/media/stock/600x600/img-42.jpg')] bg-cover transition duration-150 ease-in-out hover:opacity-75"></div>
 			<!-- Details  -->
-			<div class="ml-6 mt-4 flex flex-1 flex-col justify-between md:mt-0">
+			<div class="mt-4 flex flex-1 flex-col justify-between space-y-2 sm:ml-6 md:mt-0">
 				<div>
 					<small class="font-semibold text-gray-400 dark:text-night-300">NFT ID: 34356776</small>
 					<h2 class="text-2xl font-semibold text-gray-800 dark:text-night-50">California Art</h2>
 				</div>
 
-				<div class="flex justify-between">
+				<div class="flex space-x-8">
 					<!-- Avatar -->
 					<div class="flex items-center space-x-2">
 						<img
-							class="mx-auto block h-6 rounded-full sm:mx-0 sm:shrink-0"
+							class="mx-auto block h-7 rounded-full sm:mx-0 sm:shrink-0"
 							src="https://preview.keenthemes.com/metronic8/demo1/assets/media/avatars/300-3.jpg"
 							alt="creator face" />
 						<div class="flex flex-col">
@@ -51,12 +29,13 @@
 						</div>
 					</div>
 
-					<!-- Avatar -->
+					<!-- Price -->
 					<div class="flex items-center space-x-2">
-						<img
-							class="mx-auto block h-6 rounded-full sm:mx-0 sm:shrink-0"
-							src="https://preview.keenthemes.com/metronic8/demo1/assets/media/avatars/300-13.jpg"
-							alt="Woman's Face" />
+						<div
+							class="flex h-7 w-7 flex-shrink-0 items-center justify-center rounded-full bg-primary-500 text-center">
+							<span class="text-xs font-semibold text-white">$</span>
+						</div>
+
 						<div class="flex flex-col">
 							<small class="text-xs text-gray-400 dark:text-night-300">Instant Price</small>
 							<a
