feat: add dashboard module

--- a/src/app/modules/dashboard/pages/bidding/bidding.component.html
+++ b/src/app/modules/dashboard/pages/bidding/bidding.component.html
@@ -1,4 +1,4 @@
-<div class="mx-auto my-4 px-8 lg:container">
+<div class="mx-auto px-8 lg:container">
 	<div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4">
 		<!-- Card -->
 		<div class="flex flex-col rounded-lg bg-white p-8 dark:bg-night-700 sm:flex-row md:col-span-2">
