--- a/src/app/modules/dashboard/pages/bidding/bidding.component.html
+++ b/src/app/modules/dashboard/pages/bidding/bidding.component.html
@@ -1,120 +1,11 @@
-<div class="mx-auto px-8 lg:container">
+<div class="mx-auto px-8 pb-8 lg:container">
 	<div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4">
-		<!-- Card -->
-		<div class="flex flex-col rounded-lg bg-white p-8 dark:bg-night-700 sm:flex-row md:col-span-2">
-			<!-- image -->
-			<div
-				class="min-h-[200px] w-full flex-1 cursor-pointer rounded-md bg-[url('https://preview.keenthemes.com/metronic8/demo1/assets/media/stock/600x600/img-42.jpg')] bg-cover transition duration-150 ease-in-out hover:opacity-75"></div>
-			<!-- Details  -->
-			<div class="mt-4 flex flex-1 flex-col justify-between space-y-2 sm:ml-6 md:mt-0">
-				<div>
-					<small class="font-semibold text-gray-400 dark:text-night-300">NFT ID: 34356776</small>
-					<h2 class="text-2xl font-semibold text-gray-800 dark:text-night-50">California Art</h2>
-				</div>
-
-				<div class="flex space-x-8">
-					<!-- Avatar -->
-					<div class="flex items-center space-x-2">
-						<img
-							class="mx-auto block h-7 rounded-full sm:mx-0 sm:shrink-0"
-							src="https://preview.keenthemes.com/metronic8/demo1/assets/media/avatars/300-3.jpg"
-							alt="creator face" />
-						<div class="flex flex-col">
-							<small class="text-xs text-gray-400 dark:text-night-300">Creator</small>
-							<a
-								href=""
-								class="text-xs font-semibold text-gray-900 hover:text-primary-500 dark:text-night-100">
-								Robert Fox
-							</a>
-						</div>
-					</div>
-
-					<!-- Price -->
-					<div class="flex items-center space-x-2">
-						<div
-							class="flex h-7 w-7 flex-shrink-0 items-center justify-center rounded-full bg-primary-500 text-center">
-							<span class="text-xs font-semibold text-white">$</span>
-						</div>
-
-						<div class="flex flex-col">
-							<small class="text-xs text-gray-400 dark:text-night-300">Instant Price</small>
-							<a
-								href=""
-								class="text-xs font-semibold text-gray-900 hover:text-primary-500 dark:text-night-100">
-								4.2 ETH
-							</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="rounded-md border border-dashed border-gray-300 p-4 text-center dark:border-night-400">
-					<small class="text-gray-400 dark:text-night-300">Last Bid</small>
-					<h1 class="text-3xl font-semibold text-gray-900 dark:text-night-50">2.48 ETH</h1>
-					<span class="text-lg font-semibold text-gray-500 dark:text-night-300">$6,047.84</span>
-					<div class="mt-3 text-xs text-gray-400 dark:text-night-300">Ending in</div>
-					<div class="font-semibold text-gray-500 dark:text-night-200">06h 52m 47s</div>
-				</div>
-
-				<div class="flex items-center justify-between">
-					<button
-						class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-						Place a Bid
-					</button>
-					<button
-						class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 dark:bg-night-500 dark:text-night-200">
-						View Item
-					</button>
-				</div>
-			</div>
-		</div>
-		<!-- end Card -->
-		<!-- Card -->
-		<div class="flex flex-col rounded-lg bg-white p-8 dark:bg-night-700">
-			<!-- Image -->
-			<div
-				class="h-[240px] cursor-pointer rounded-md bg-[url('https://preview.keenthemes.com/metronic8/demo1/assets/media/stock/600x600/img-39.jpg')] bg-cover transition duration-150 ease-in-out hover:opacity-75"></div>
-			<!-- Description  -->
-			<h2 class="text-md mt-6 font-semibold text-gray-900 dark:text-night-50">Wavy Curved Art</h2>
-			<div class="flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-				Last Bid: 1.07 ETH
-				<span>$2,630</span>
-			</div>
-			<!-- Buttons -->
-			<div class="mt-6 flex items-center justify-between">
-				<button
-					class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-					Place a Bid
-				</button>
-				<button
-					class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 dark:bg-night-500 dark:text-night-200">
-					View Item
-				</button>
-			</div>
-		</div>
-		<!-- end Card -->
-		<!-- Card -->
-		<div class="flex flex-col rounded-lg bg-white p-8 dark:bg-night-700">
-			<!-- Image -->
-			<div
-				class="h-[240px] cursor-pointer rounded-md bg-[url('https://preview.keenthemes.com/metronic8/demo1/assets/media/stock/600x600/img-47.jpg')] bg-cover transition duration-150 ease-in-out hover:opacity-75"></div>
-			<!-- Description  -->
-			<h2 class="text-md mt-6 font-semibold text-gray-900 dark:text-night-50">Happy Kitty Art</h2>
-			<div class="flex items-end justify-between text-sm font-semibold text-gray-400 dark:text-night-300">
-				Last Bid: 7.83 ETH
-				<span>$17,035</span>
-			</div>
-			<!-- Buttons -->
-			<div class="mt-6 flex items-center justify-between">
-				<button
-					class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-					Place a Bid
-				</button>
-				<button
-					class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 dark:bg-night-500 dark:text-night-200">
-					View Item
-				</button>
-			</div>
-		</div>
-		<!-- end Card -->
+		<!-- Dual Card -->
+		<div bidding-dual-card [bidding]="bidding[0]" class="md:col-span-2"></div>
+		<!-- end Dual Card -->
+		<!-- Single Card -->
+		<div bidding-single-card [bidding]="bidding[1]"></div>
+		<div bidding-single-card [bidding]="bidding[2]"></div>
+		<!-- end Single Card -->
 	</div>
 </div>
