doc: update readme file

--- a/src/app/modules/dashboard/components/bidding-dual-card/bidding-dual-card.component.html
+++ b/src/app/modules/dashboard/components/bidding-dual-card/bidding-dual-card.component.html
@@ -14,7 +14,7 @@
 			<div class="flex items-center space-x-2">
 				<img
 					class="mx-auto block h-7 rounded-full sm:mx-0 sm:shrink-0"
-					src="https://preview.keenthemes.com/metronic8/demo1/assets/media/avatars/300-3.jpg"
+					[src]="bidding.avatar"
 					alt="creator face" />
 				<div class="flex flex-col">
 					<small class="text-xs text-gray-400 dark:text-night-300">Creator</small>
