feat: add apex chart js

--- a/src/app/modules/dashboard/pages/bidding/bidding.component.html
+++ b/src/app/modules/dashboard/pages/bidding/bidding.component.html
@@ -7,5 +7,6 @@
 		<div bidding-single-card [bidding]="bidding[1]"></div>
 		<div bidding-single-card [bidding]="bidding[2]"></div>
 		<!-- end Single Card -->
+		<app-bidding-chart-card></app-bidding-chart-card>
 	</div>
 </div>
