--- a/src/app/modules/dashboard/components/Bidding/bidding-chart-card/bidding-chart-card.component.html
+++ b/src/app/modules/dashboard/components/Bidding/bidding-chart-card/bidding-chart-card.component.html
@@ -5,8 +5,7 @@
 			<div class="flex items-center space-x-1">
 				<span class="text-lg font-semibold text-gray-400 dark:text-night-300">$</span>
 				<span class="text-4xl font-semibold text-gray-900 dark:text-white">3,274.94</span>
-				<div
-					class="flex items-center rounded-md bg-green-500/25 py-1 pr-2 pl-1 text-xs font-semibold text-green-500">
+				<div class="flex items-center rounded-md bg-green-500/25 py-1 pr-2 pl-1 text-xs font-semibold text-green-500">
 					<svg-icon src="assets/icons/outline/arrow-sm-up.svg" [svgClass]="'h-4 w-4'"></svg-icon>
 					9.2%
 				</div>
@@ -52,6 +51,58 @@
 		[tooltip]="chartOptions.tooltip!"
 		[colors]="chartOptions.colors!"
 		[grid]="chartOptions.grid!"
-		[title]="chartOptions.title!"></apx-chart>
+		[title]="chartOptions.title!">
+	</apx-chart>
 	<!-- end Chart -->
+
+	<!--Table-->
+	<table class="mt-2 w-full table-auto text-sm">
+		<!--begin::Table head-->
+		<thead>
+			<tr>
+				<th></th>
+				<th></th>
+				<th></th>
+			</tr>
+		</thead>
+		<!--end::Table head-->
+		<!--begin::Table body-->
+		<tbody>
+			<tr>
+				<td class="py-2">
+					<a class="text-sm font-semibold text-gray-400 dark:text-night-400">2:30 PM</a>
+				</td>
+				<td class="py-2 text-right">
+					<span class="text-sm font-semibold text-gray-800 dark:text-night-100">$2,756.26</span>
+				</td>
+				<td class="py-2 text-right">
+					<span class="text-sm font-semibold text-rose-600">-139.34</span>
+				</td>
+			</tr>
+			<tr>
+				<td class="py-2">
+					<a class="text-sm font-semibold text-gray-400 dark:text-night-400">3:10 PM</a>
+				</td>
+				<td class="py-2 text-right">
+					<span class="text-sm font-semibold text-gray-800 dark:text-night-100">$3,207.03</span>
+				</td>
+				<td class="py-2 text-right">
+					<span class="text-sm font-semibold text-green-500">+576.24</span>
+				</td>
+			</tr>
+			<tr>
+				<td class="py-2">
+					<a class="text-sm font-semibold text-gray-400 dark:text-night-400">3:55 PM</a>
+				</td>
+				<td class="py-2 text-right">
+					<span class="text-sm font-semibold text-gray-800 dark:text-night-100">$3,274.94</span>
+				</td>
+				<td class="py-2 text-right">
+					<span class="text-sm font-semibold text-green-500">+124.03</span>
+				</td>
+			</tr>
+		</tbody>
+		<!--end::Table body-->
+	</table>
+	<!--end Table-->
 </div>
