refactor: nft page

--- a/src/app/modules/dashboard/components/nft/nft-single-card/nft-single-card.component.html
+++ b/src/app/modules/dashboard/components/nft/nft-single-card/nft-single-card.component.html
@@ -12,12 +12,11 @@
 	</div>
 	<!-- Buttons -->
 	<div class="mt-6 flex items-center justify-between">
-		<button
-			class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
+		<button class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-400">
 			Place a Bid
 		</button>
 		<button
-			class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 dark:bg-night-500 dark:text-night-200">
+			class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200 dark:bg-night-500 dark:text-night-200 dark:hover:bg-night-600">
 			View Item
 		</button>
 	</div>
