--- a/src/app/modules/dashboard/components/nft/nft-dual-card/nft-dual-card.component.html
+++ b/src/app/modules/dashboard/components/nft/nft-dual-card/nft-dual-card.component.html
@@ -12,10 +12,7 @@
 		<div class="flex space-x-8">
 			<!-- Avatar -->
 			<div class="flex items-center space-x-2">
-				<img
-					class="mx-auto block h-7 rounded-full sm:mx-0 sm:shrink-0"
-					[src]="bidding.avatar"
-					alt="creator face" />
+				<img class="mx-auto block h-7 rounded-full sm:mx-0 sm:shrink-0" [src]="bidding.avatar" alt="creator face" />
 				<div class="flex flex-col">
 					<small class="text-xs text-gray-400 dark:text-night-300">Creator</small>
 					<a href="" class="text-xs font-semibold text-gray-900 hover:text-primary-500 dark:text-night-100">
@@ -26,8 +23,7 @@
 
 			<!-- Price -->
 			<div class="flex items-center space-x-2">
-				<div
-					class="flex h-7 w-7 flex-shrink-0 items-center justify-center rounded-full bg-primary-500 text-center">
+				<div class="flex h-7 w-7 flex-shrink-0 items-center justify-center rounded-full bg-primary-500 text-center">
 					<span class="text-xs font-semibold text-white">$</span>
 				</div>
 
@@ -49,12 +45,11 @@
 		</div>
 
 		<div class="flex items-center justify-between">
-			<button
-				class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
+			<button class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-400">
 				Place a Bid
 			</button>
 			<button
-				class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 dark:bg-night-500 dark:text-night-200">
+				class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200 dark:bg-night-500 dark:text-night-200 dark:hover:bg-night-600">
 				View Item
 			</button>
 		</div>
