--- a/src/app/modules/dashboard/components/nft/nft-dual-card/nft-dual-card.component.html
+++ b/src/app/modules/dashboard/components/nft/nft-dual-card/nft-dual-card.component.html
@@ -1,22 +1,22 @@
 <div class="flex min-h-[420px] flex-col rounded-lg bg-white p-8 dark:bg-night-700 sm:flex-row">
 	<div
-		[ngStyle]="{ 'background-image': 'url(' + bidding.image + ')' }"
+		[ngStyle]="{ 'background-image': 'url(' + nft.image + ')' }"
 		class="min-h-[200px] w-full flex-1 cursor-pointer rounded-md bg-cover transition duration-150 ease-in-out hover:opacity-75"></div>
 	<!-- Details  -->
 	<div class="mt-4 flex flex-1 flex-col justify-between space-y-2 sm:ml-6 md:mt-0">
 		<div>
-			<small class="font-semibold text-gray-400 dark:text-night-300">NFT ID: {{ bidding.id }}</small>
-			<h2 class="text-2xl font-semibold text-gray-800 dark:text-night-50">{{ bidding.title }}</h2>
+			<small class="font-semibold text-gray-400 dark:text-night-300">NFT ID: {{ nft.id }}</small>
+			<h2 class="text-2xl font-semibold text-gray-800 dark:text-night-50">{{ nft.title }}</h2>
 		</div>
 
 		<div class="flex space-x-8">
 			<!-- Avatar -->
 			<div class="flex items-center space-x-2">
-				<img class="mx-auto block h-7 rounded-full sm:mx-0 sm:shrink-0" [src]="bidding.avatar" alt="creator face" />
+				<img class="mx-auto block h-7 rounded-full sm:mx-0 sm:shrink-0" [src]="nft.avatar" alt="creator face" />
 				<div class="flex flex-col">
 					<small class="text-xs text-gray-400 dark:text-night-300">Creator</small>
 					<a href="" class="text-xs font-semibold text-gray-900 hover:text-primary-500 dark:text-night-100">
-						{{ bidding.creator }}
+						{{ nft.creator }}
 					</a>
 				</div>
 			</div>
@@ -30,7 +30,7 @@
 				<div class="flex flex-col">
 					<small class="text-xs text-gray-400 dark:text-night-300">Instant Price</small>
 					<a href="" class="text-xs font-semibold text-gray-900 hover:text-primary-500 dark:text-night-100">
-						{{ bidding.instant_price }} ETH
+						{{ nft.instant_price }} ETH
 					</a>
 				</div>
 			</div>
@@ -38,10 +38,10 @@
 
 		<div class="rounded-md border border-dashed border-gray-300 p-4 text-center dark:border-night-400">
 			<small class="text-gray-400 dark:text-night-300">Last Bid</small>
-			<h1 class="text-3xl font-semibold text-gray-900 dark:text-night-50">{{ bidding.last_bid }} ETH</h1>
-			<span class="text-lg font-semibold text-gray-500 dark:text-night-300">{{ bidding.price | currency }}</span>
+			<h1 class="text-3xl font-semibold text-gray-900 dark:text-night-50">{{ nft.last_bid }} ETH</h1>
+			<span class="text-lg font-semibold text-gray-500 dark:text-night-300">{{ nft.price | currency }}</span>
 			<div class="mt-3 text-xs text-gray-400 dark:text-night-300">Ending in</div>
-			<div class="font-semibold text-gray-500 dark:text-night-200">{{ bidding.ending_in }}</div>
+			<div class="font-semibold text-gray-500 dark:text-night-200">{{ nft.ending_in }}</div>
 		</div>
 
 		<div class="flex items-center justify-between">
