--- a/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
+++ b/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
@@ -28,9 +28,7 @@
 			</div>
 			<div class="overflow-hidden px-2 text-sm font-semibold text-gray-700 dark:text-night-50">
 				Luciano Oliveira
-				<p class="truncate text-ellipsis text-xs font-semibold text-gray-400 dark:text-night-300">
-					workingluciano@gmail.com
-				</p>
+				<p class="truncate text-ellipsis text-xs font-semibold text-gray-400 dark:text-night-300">me@lanno.dev</p>
 			</div>
 		</div>
 
@@ -50,6 +48,7 @@
 				Settings
 			</li>
 			<li
+				routerLink="/auth"
 				class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500 dark:hover:text-primary-500">
 				Sign out
 			</li>
