feat: add log in with google button

--- a/src/app/modules/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/pages/sign-in/sign-in.component.html
@@ -5,10 +5,22 @@
 			Hello Again
 			<p class="text-primary-500">!</p>
 		</h2>
-		<p class="text-sm text-gray-400 dark:text-night-200">Some description about this login page here.</p>
+		<p class="text-sm text-gray-400 dark:text-night-200">Wellcome back! Please enter your details.</p>
 	</div>
 
-	<input type="hidden" name="remember" value="true" />
+	<button
+		type="submit"
+		routerLink="/dashboard"
+		class="flex w-full items-center justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-xs font-medium text-gray-500 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-gray-50 dark:border-night-500 dark:bg-night-700 dark:text-night-200 dark:hover:bg-night-600">
+		<svg-icon src="assets/icons/google-logo.svg" [svgClass]="'h-6 w-6 mr-2'"> </svg-icon>
+		Log in with Google
+	</button>
+
+	<div
+		class="my-4 flex items-center before:mt-0.5 before:flex-1 before:border-t before:border-gray-300 after:mt-0.5 after:flex-1 after:border-t after:border-gray-300 dark:before:border-night-500 dark:after:border-night-500">
+		<p class="mx-4 mb-0 text-center text-sm font-semibold text-gray-400 dark:text-night-400">or</p>
+	</div>
+
 	<div class="space-y-3 text-left">
 		<div class="relative">
 			<input type="text" id="email" class="peer block" placeholder=" " />
@@ -35,9 +47,7 @@
 		</div>
 
 		<div class="text-sm">
-			<a routerLink="/auth/forgot-password" class="font-medium text-primary-600 hover:text-primary-500">
-				Forgot your password?
-			</a>
+			<a routerLink="/auth/forgot-password" class="font-medium text-primary-600 hover:text-primary-500"> Forgot your password? </a>
 		</div>
 	</div>
 
@@ -45,7 +55,7 @@
 	<div>
 		<button
 			type="submit"
-			routerLink="/dashboard"
+			routerLink="dashboard"
 			class="group relative flex w-full justify-center rounded-md border border-transparent bg-primary-500 py-2 px-4 text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-primary-400">
 			Sign in
 		</button>
