fix: button type with routelink

--- a/src/app/modules/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/pages/sign-in/sign-in.component.html
@@ -5,7 +5,7 @@
 			Hello Again
 			<p class="text-primary-500">!</p>
 		</h2>
-		<p class="text-sm text-gray-400 dark:text-night-200">Wellcome back! Please enter your details.</p>
+		<p class="text-sm text-gray-400 dark:text-night-200">Enter your credential to access your account.</p>
 	</div>
 
 	<button
@@ -54,8 +54,8 @@
 	<!-- Submit Button -->
 	<div>
 		<button
-			type="submit"
-			routerLink="dashboard"
+			type="button"
+			routerLink="/dashboard/"
 			class="group relative flex w-full justify-center rounded-md border border-transparent bg-primary-500 py-2 px-4 text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-primary-400">
 			Sign in
 		</button>
