refactor: auth layout

--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,12 +1,13 @@
 <div class="flex h-screen w-screen">
-	<div class="relative hidden flex-1 items-end justify-center bg-night-700 lg:flex">
-		<img
-			class="absolute inset-0 h-full w-full object-cover opacity-20"
-			src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80&sat=-100"
-			alt="" />
-		<div class="m-20 space-y-4 text-white">
-			<h1 class="text-4xl font-bold">"A feel clicks away from creating your lottery Display"</h1>
-			<p class="text-md">Some description in small text</p>
+	<div class="relative hidden flex-1 items-center justify-center bg-[url('./assets/bg/auth.png')] bg-cover lg:flex">
+		<div class="absolute h-full w-full bg-primary-500/90"></div>
+		<div class="absolute m-20 max-w-xl space-y-4 text-center text-white">
+			<img src="./assets/images/auth-screens.png" alt="dashboard widget" />
+			<h1 class="text-4xl font-bold">"Fast, Efficient and Productive"</h1>
+			<p class="text-xs font-light">
+				In this kind of post, the bloggerintroduces a person they’ve interviewed and provides some background information about the
+				intervieweeand their work following this is a transcript of the interview.
+			</p>
 		</div>
 	</div>
 	<div class="grid flex-1 items-center justify-center bg-white dark:bg-night-700">
